Improve open todo animation and elements positioning to avoid UI jumping

--- a/javascript/react/study-app-1/src/components/todo/TodoApp.css
+++ b/javascript/react/study-app-1/src/components/todo/TodoApp.css
@@ -61,40 +61,65 @@
 }
 
 .todo-item {
-  height: 40px;
+  position: relative;
+  overflow: hidden;
+  min-height: 40px;
+  max-height: 40px;
   font-size: .9em;
-  padding: 0 10px 10px;
+  padding: 0 2% 10px 0;
   list-style-type: none;
   border-bottom: 1px solid #fff;
+  transition: all .2s linear;
+  transform: translateZ(0);
+  will-change: transform;
 }
 
 .todo-item.todo-item__editing {
-  height: auto;
+  max-height: 102px;
+}
+
+.todo-item .status-button {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 40px;
+  width: 15%;
+  padding-right: 15px;
+  padding-left: 5px;
+  vertical-align: middle;
 }
 
 .todo-item-label,
 .todo-item .status-button {
-  float: left;
+  display: inline-block;
+  vertical-align:middle;
 }
 
 .todo-item-label,
 .todo-item-label-input {
   width: 85%;
+  margin-left: 15%;
 }
 
 .todo-item-label {
-  display: inline-block;
   text-align: left;
   line-height: 40px;
+  height: 40px;
   color: #263248;
   transition: opacity 0.3s linear;
+  border-bottom: 1px solid rgba(192,192,192,0.5);
 }
 
 .todo-item-label-input {
-  margin-top: 10px;
-  background-color: transparent;
+  padding: 0;
+  height: 40px;
   border: none;
   outline: none;
+  font-size: 1em;
+  color: #263248;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(192,192,192,0.5);
+  padding-top: 1px;  /* fix small movement when alternating input and label */
 }
 
 .todo-item__complete .todo-item-label {
@@ -113,20 +138,13 @@
   visibility: visible;
 }
 
-.todo-item .status-button {
-  height: 40px;
-  width: 39px;
-  margin-left: -10px;
-  padding-right: 10px;
-  padding-left: 10px;
-}
-
 .todo-item-actions {
   position: relative;
   width: 100%;
-  border-top: 1px solid rgba(192,192,192,0.5);
   padding-top: 10px;
   margin-top: 10px;
+  margin: 0 10px;
+  /*border-top: 1px solid rgba(192,192,192,0.5);*/
 }
 
 .todo-item-action-button {
@@ -163,8 +181,4 @@
 
 .todo-filter a.active {
   text-decoration: underline;
-}
-
-.todo-app input {
-  font-size: 20px;
 }
